--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "martinez-polygon-clipping": "^0.5.0",
+    "polybooljs": "^1.2.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
