--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "serve": "npm run build && npm run webpack-dev-server"
   },
   "dependencies": {
+    "@turf/boolean-overlap": "^6.0.1",
+    "@types/turf": "^3.5.32",
     "jquery": "^3.3.1",
-    "polybooljs": "^1.2.0",
+    "turf": "^3.0.14",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
