--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@turf/boolean-contains": "^6.0.1",
     "@turf/boolean-overlap": "^6.0.1",
+    "@turf/center-of-mass": "^6.0.1",
     "@turf/unkink-polygon": "^5.1.5",
     "@types/turf": "^3.5.32",
     "jquery": "^3.3.1",
