--- a/package.json
+++ b/package.json
@@ -1,52 +1,59 @@
 {
-  "name": "physics-2d",
+  "name": "plasmastrapi-v2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "./node_modules/.bin/webpack",
-    "webpack-dev-server": "./node_modules/.bin/webpack-dev-server --open",
-    "purge-dist-directory": "./node_modules/.bin/rimraf ./dist",
-    "lint-fix": "./node_modules/.bin/tslint --project tsconfig.json --fix src/**/*.ts",
-    "lint": "./node_modules/.bin/tslint --project tsconfig.json",
-    "bundle": "npm run lint-fix && npm run lint && npm run purge-dist-directory && npm run webpack",
-    "build": "npm run bundle",
-    "serve": "npm run build && npm run webpack-dev-server"
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "prettier-format": "prettier --config ./.prettierrc .//**/*.{ts,js,jsx,json} --write",
+    "build": "npm run lint && npm run prettier-format && rimraf ./dist && webpack",
+    "serve": "npm run build && webpack-dev-server"
   },
   "dependencies": {
-    "@turf/boolean-contains": "^6.0.1",
-    "@turf/boolean-overlap": "^6.0.1",
-    "@turf/center-of-mass": "^6.0.1",
+    "@plasmastrapi/base": "^1.0.25",
+    "@plasmastrapi/diagnostics": "^1.0.14",
+    "@plasmastrapi/ecs": "^1.0.10",
+    "@plasmastrapi/engine": "^1.0.12",
+    "@plasmastrapi/geometry": "^1.0.5",
+    "@plasmastrapi/html5-canvas": "^1.0.2",
+    "@plasmastrapi/physics": "^1.0.1",
+    "@plasmastrapi/presentation": "^1.0.5",
+    "@turf/area": "^6.5.0",
+    "@turf/bbox": "^6.5.0",
+    "@turf/boolean-contains": "^6.5.0",
+    "@turf/boolean-overlap": "^6.5.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
+    "@turf/boolean-point-on-line": "^6.5.0",
+    "@turf/center-of-mass": "^6.5.0",
+    "@turf/difference": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "@turf/kinks": "^6.5.0",
+    "@turf/line-intersect": "^6.5.0",
+    "@turf/simplify": "^6.5.0",
     "@turf/unkink-polygon": "^5.1.5",
-    "@types/turf": "^3.5.32",
-    "jquery": "^3.3.1",
-    "turf": "^3.0.14",
-    "uuid": "^3.3.2"
+    "file-loader": "^6.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.7",
-    "@types/jquery": "^3.3.27",
-    "@types/node": "^10.12.15",
-    "@types/sinon": "^7.0.0",
-    "@types/uuid": "^3.4.4",
-    "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^4.6.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
-    "jsdom": "^13.1.0",
-    "raw-loader": "^1.0.0",
-    "rimraf": "^2.6.2",
-    "sinon": "^7.2.2",
-    "ts-jest": "^23.10.4",
-    "ts-loader": "^5.3.1",
-    "tslint": "^5.12.0",
-    "tslint-consistent-codestyle": "^1.13.3",
-    "typescript": "^3.2.2",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "@babel/core": "^7.21.4",
+    "@types/node": "^10.17.60",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "@webpack-cli/serve": "^1.5.2",
+    "babel-loader": "^8.3.0",
+    "copy-webpack-plugin": "^6.4.1",
+    "eslint": "^7.31.0",
+    "eslint-cli": "^1.1.1",
+    "html-webpack-plugin": "^5.3.2",
+    "prettier": "^2.8.7",
+    "raw-loader": "^4.0.2",
+    "rimraf": "^2.7.1",
+    "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "typescript": "^3.9.10",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.13.2"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "obi-wan-jacobi",
+  "license": ""
 }
