--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,23 @@
 {
-    "compilerOptions": {
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "outDir": "./build",
-        "rootDir": "./src",
-        "allowJs": false,
-        "target": "esnext",
-        "module": "esnext",
-        "sourceMap": true,
-        "baseUrl": ".",
-        "noImplicitAny": true,
-        "strictNullChecks": true,
-        "moduleResolution": "node",
-        "noUnusedLocals": false,
-        "types": [
-            "jest",
-            "jquery",
-            "node",
-            "sinon",
-            "uuid",
-        ]
-    },
-    "include": [
-        "src/**/*.ts",
-    ],
-    "exclude": [
-        "src/tests"
-    ]
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "outDir": "./build",
+    "rootDir": "./src",
+    "allowJs": false,
+    "target": "esnext",
+    "module": "esnext",
+    "sourceMap": true,
+    "baseUrl": "src",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": false,
+    "types": ["node"],
+    "paths": {
+      "app/*": ["app/*"]
+    }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
