--- a/package.json
+++ b/package.json
@@ -10,28 +10,15 @@
     "serve": "npm run build && webpack-dev-server"
   },
   "dependencies": {
+    "@plasmastrapi/animation": "^1.0.2",
     "@plasmastrapi/base": "^1.0.25",
-    "@plasmastrapi/diagnostics": "^1.0.14",
-    "@plasmastrapi/ecs": "^1.0.11",
-    "@plasmastrapi/engine": "^1.0.12",
-    "@plasmastrapi/geometry": "^1.0.5",
-    "@plasmastrapi/html5-canvas": "^1.0.3",
-    "@plasmastrapi/physics": "^1.0.1",
-    "@plasmastrapi/presentation": "^1.0.5",
-    "@turf/area": "^6.5.0",
-    "@turf/bbox": "^6.5.0",
-    "@turf/boolean-contains": "^6.5.0",
-    "@turf/boolean-overlap": "^6.5.0",
-    "@turf/boolean-point-in-polygon": "^6.5.0",
-    "@turf/boolean-point-on-line": "^6.5.0",
-    "@turf/center-of-mass": "^6.5.0",
-    "@turf/difference": "^6.5.0",
-    "@turf/helpers": "^6.5.0",
-    "@turf/kinks": "^6.5.0",
-    "@turf/line-intersect": "^6.5.0",
-    "@turf/simplify": "^6.5.0",
-    "@turf/unkink-polygon": "^5.1.5",
-    "file-loader": "^6.2.0"
+    "@plasmastrapi/diagnostics": "^1.0.17",
+    "@plasmastrapi/ecs": "^1.0.20",
+    "@plasmastrapi/engine": "^1.0.21",
+    "@plasmastrapi/geometry": "^1.0.14",
+    "@plasmastrapi/html5-canvas": "^1.0.9",
+    "@plasmastrapi/physics": "^1.0.7",
+    "@plasmastrapi/viewport": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -43,16 +30,17 @@
     "copy-webpack-plugin": "^6.4.1",
     "eslint": "^7.31.0",
     "eslint-cli": "^1.1.1",
-    "html-webpack-plugin": "^5.3.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.1",
     "prettier": "^2.8.7",
     "raw-loader": "^4.0.2",
     "rimraf": "^2.7.1",
     "ts-loader": "^9.4.2",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^3.9.10",
-    "webpack": "^5.77.0",
+    "webpack": "^5.79.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.13.2"
+    "webpack-dev-server": "^4.13.3"
   },
   "author": "obi-wan-jacobi",
   "license": ""
